Fixed jetty issues