@@ -103,46 +103,27 @@
 					<contextReloadable>true</contextReloadable>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.3.6.v20151106</version>
-				<configuration>
-					<jvmArgs>-XX:PermSize=512m -XX:MaxPermSize=1024m</jvmArgs>
-					<scanIntervalSeconds>1000</scanIntervalSeconds>
-					<stopKey>foo</stopKey>
-					<stopPort>9999</stopPort>
-					<webAppConfig implementation="org.eclipse.jetty.maven.plugin.JettyWebAppContext">
-						<contextPath>/testapp</contextPath>
-						<sessionHandler implementation="org.eclipse.jetty.server.session.SessionHandler">
-							<sessionManager
-								implementation="org.eclipse.jetty.server.session.HashSessionManager">
-								<storeDirectory>${basedir}/target/sessions</storeDirectory>
-								<idleSavePeriod>1</idleSavePeriod>
-							</sessionManager>
-						</sessionHandler>
-					</webAppConfig>
-				</configuration>
-				<executions>
+			 <plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-dependency-plugin</artifactId>
+				  <version>2.3</version>
+				  <executions>
 					<execution>
-						<id>start-jetty</id>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<scanIntervalSeconds>0</scanIntervalSeconds>
-							<daemon>true</daemon>
-						</configuration>
+					  <phase>package</phase>
+					  <goals><goal>copy</goal></goals>
+					  <configuration>
+						<artifactItems>
+						  <artifactItem>
+							<groupId>org.eclipse.jetty</groupId>
+							<artifactId>jetty-runner</artifactId>
+							<version>9.3.3.v20150827</version>
+							<destFileName>jetty-runner.jar</destFileName>
+						  </artifactItem>
+						</artifactItems>
+					  </configuration>
 					</execution>
-					<execution>
-						<id>stop-jetty</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+				   </executions>
+				</plugin>
 		</plugins>
 	</build>
 </project>
